# supabase

./: .coderabbit.yaml  .cursorignore  .dockerignore  .envrc  .gitattributes  .gitignore  .gitpod.yml  .lychee.toml  .mcp.json  .misspell-fixer.ignore  .npmrc  .nvmrc  .prettierignore  .prettierrc  .prettierrc.js  .turbo-cookie  .vale.ini  1  AGENTS.md  AI_POLICY.md  CHANGES_SUMMARY.md  CODEOWNERS  CONTRIBUTING.md  DB_PUSH_DEEP_LINK_VERIFICATION.md  DEPENDENCY_INJECTION_PLAN.md  DEVELOPERS.md  Dockerfile  FORK-NOTES.md  LICENSE  LLM.md  Makefile  N  PERFORMANCE_OPTIMIZATIONS.md  PROMISING_DIRECTIONS.md  README-zh.md  README.de.md  README.md  README.zh-CN.md  SECURITY.md  STATE_OF_STARTUPS_2025_SUMMARY.md  (+137 more)
.claude/: CLAUDE.md  settings.json  update settings.json
.devcontainer/: devcontainer.json
.devmri/: branchprotection-fix.yml  docstaleness-fix.yml  parallelize_ci-fix.yml  rebalance_reviewers-fix.yml  reviewdelay-fix.yml  surgery-fix.yml
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  label-teams-map.yml  labeler.yml  pull.yml  pull_request_template.md
.temp/: cli-latest  postgres-version
about/: .gitignore  README.md  ReferenceGenerator.ts  package-lock.json  (+5 more)
apps/docs/content/examples/ai/image_search/: pyproject.toml
apps/docs/content/examples/ai/image_search/supabase/: config.toml
examples/ai/aws_bedrock_image_search/: README.md  pyproject.toml
examples/ai/aws_bedrock_image_search/image_search/: main.py
examples/ai/aws_bedrock_image_search/supabase/: config.toml
(+25387 files in other folders)
